@@ -744,6 +744,7 @@ function title_tokens_alter(array &$replacements, array $context) {
       $entity = $context['data'][$context['type']];
       list($id, $vid, $bundle) = entity_extract_ids($entity_type, $entity);
       $options = $context['options'];
+      $sanitize = !empty($options['sanitize']);
 
       // Since Title tokens are mostly used in storage contexts we default to
       // the current working language, that is the entity language. Modules
@@ -762,7 +763,7 @@ function title_tokens_alter(array &$replacements, array $context) {
                 if (is_array($item)) {
                   $item = reset($item);
                 }
-                $replacements[$context['tokens'][$legacy_field]] = $item;
+                $replacements[$context['tokens'][$legacy_field]] = $sanitize ? check_plain($item) : $item;
               }
             }
           }
